--- a/ToDo List/Base.lproj/Main.storyboard
+++ b/ToDo List/Base.lproj/Main.storyboard
@@ -1,24 +1,174 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UO0-lw-KpK">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--To-do List-->
+        <scene sceneID="hqo-eE-rwb">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="f1i-W8-cFv" customClass="TodoTableViewController" customModule="ToDo_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6kK-9q-nrN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="fak-Xh-HEi">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fak-Xh-HEi" id="cXr-iO-ukG">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="f1i-W8-cFv" id="skh-yi-GIw"/>
+                            <outlet property="delegate" destination="f1i-W8-cFv" id="OtA-90-AkY"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="To-do List" id="nkM-wP-NPq">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="PpB-C9-SDo"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4eV-re-wGF">
+                            <connections>
+                                <segue destination="nA9-ds-utv" kind="show" id="CXK-N9-RgP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="llc-5y-1y4" kind="show" identifier="moveToComplete" id="NB7-Iu-Wtp"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e9a-u4-H0v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="402" y="8"/>
+        </scene>
+        <!--Add To Do View Controller-->
+        <scene sceneID="6kg-pX-3AJ">
+            <objects>
+                <viewController id="nA9-ds-utv" customClass="AddToDoViewController" customModule="ToDo_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NnG-8P-NLh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZxZ-Qb-Ajb">
+                                <rect key="frame" x="16" y="96" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xTN-eC-2Ly">
+                                <rect key="frame" x="16" y="131" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6x-xA-gfc">
+                                <rect key="frame" x="150" y="218" width="75" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ygo-LQ-bHu">
+                                <rect key="frame" x="163" y="247" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Gw-rZ-X02">
+                                <rect key="frame" x="172" y="327" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addTap:" destination="nA9-ds-utv" eventType="touchUpInside" id="oJG-d7-5ge"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Gw-rZ-X02" firstAttribute="centerX" secondItem="NnG-8P-NLh" secondAttribute="centerX" id="2fn-XN-iGR"/>
+                            <constraint firstItem="ygo-LQ-bHu" firstAttribute="centerX" secondItem="NnG-8P-NLh" secondAttribute="centerX" id="4tT-MP-wHy"/>
+                            <constraint firstItem="ZxZ-Qb-Ajb" firstAttribute="leading" secondItem="e3D-h3-em5" secondAttribute="leading" constant="16" id="8jH-aI-Gsu"/>
+                            <constraint firstItem="e3D-h3-em5" firstAttribute="trailing" secondItem="ZxZ-Qb-Ajb" secondAttribute="trailing" constant="16" id="Hb3-jI-8Vz"/>
+                            <constraint firstItem="xTN-eC-2Ly" firstAttribute="top" secondItem="ZxZ-Qb-Ajb" secondAttribute="bottom" constant="14" id="J01-12-W5M"/>
+                            <constraint firstItem="ygo-LQ-bHu" firstAttribute="top" secondItem="L6x-xA-gfc" secondAttribute="bottom" constant="8" id="OJv-RE-gmY"/>
+                            <constraint firstItem="ZxZ-Qb-Ajb" firstAttribute="top" secondItem="e3D-h3-em5" secondAttribute="top" constant="32" id="P73-ri-p5r"/>
+                            <constraint firstItem="xTN-eC-2Ly" firstAttribute="leading" secondItem="e3D-h3-em5" secondAttribute="leading" constant="16" id="Zcu-Aq-5p9"/>
+                            <constraint firstItem="L6x-xA-gfc" firstAttribute="centerX" secondItem="NnG-8P-NLh" secondAttribute="centerX" id="ZhC-L4-xcO"/>
+                            <constraint firstItem="e3D-h3-em5" firstAttribute="trailing" secondItem="xTN-eC-2Ly" secondAttribute="trailing" constant="16" id="dmb-FO-iJv"/>
+                            <constraint firstItem="6Gw-rZ-X02" firstAttribute="top" secondItem="ygo-LQ-bHu" secondAttribute="bottom" constant="49" id="inU-b3-6Pu"/>
+                            <constraint firstItem="L6x-xA-gfc" firstAttribute="top" secondItem="xTN-eC-2Ly" secondAttribute="bottom" constant="57" id="yiO-Jo-FOr"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="e3D-h3-em5"/>
+                    </view>
+                    <connections>
+                        <outlet property="importantSwitch" destination="ygo-LQ-bHu" id="7RZ-QR-7Zf"/>
+                        <outlet property="titleTextField" destination="xTN-eC-2Ly" id="Oxc-XW-mMa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="afC-xW-B2Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1180" y="8"/>
+        </scene>
+        <!--Complete To Do View Controller-->
+        <scene sceneID="Le2-Em-Fd3">
+            <objects>
+                <viewController id="llc-5y-1y4" customClass="CompleteToDoViewController" customModule="ToDo_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dFn-Yj-d9y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J4x-sK-G3k">
+                                <rect key="frame" x="8" y="128" width="359" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4nG-cq-HgR">
+                                <rect key="frame" x="154" y="205" width="67" height="30"/>
+                                <state key="normal" title="Complete"/>
+                                <connections>
+                                    <action selector="completeTapped:" destination="llc-5y-1y4" eventType="touchUpInside" id="LcA-Y3-y5D"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="J4x-sK-G3k" firstAttribute="top" secondItem="3NO-18-MWN" secondAttribute="top" constant="64" id="8KZ-c2-sGB"/>
+                            <constraint firstItem="4nG-cq-HgR" firstAttribute="centerX" secondItem="dFn-Yj-d9y" secondAttribute="centerX" id="Zar-dI-mCn"/>
+                            <constraint firstItem="3NO-18-MWN" firstAttribute="trailing" secondItem="J4x-sK-G3k" secondAttribute="trailing" constant="8" id="hXG-un-9gu"/>
+                            <constraint firstItem="J4x-sK-G3k" firstAttribute="leading" secondItem="3NO-18-MWN" secondAttribute="leading" constant="8" id="nGm-Uo-ump"/>
+                            <constraint firstItem="4nG-cq-HgR" firstAttribute="top" secondItem="J4x-sK-G3k" secondAttribute="bottom" constant="34" id="nIW-ig-3bE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="3NO-18-MWN"/>
+                    </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="J4x-sK-G3k" id="wqJ-8R-CxX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5tE-t1-Jga" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="401" y="734"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="X2K-u5-1xW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UO0-lw-KpK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nY6-pt-yvZ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="f1i-W8-cFv" kind="relationship" relationship="rootViewController" id="3Pt-Pb-ra5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sLS-Ts-OkU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="8"/>
         </scene>
     </scenes>
 </document>
